Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  HEAD only

    Features added

     - Collector #167: Support __getattr__ on cAccessControl PermissionRole
       objects to allow gathering of permission names for products like
       DocFinder and VerboseSecurity.

    Bugs Fixed

     - The ZEO unit tests and wo_pcgi.py didn't run on Windows if the path 
       to the python executable included a space.

     - Some calls to os.system('chmod') has been replaced with the more 
       portable os.chmod() call, to make install work properly on Windows.


  Zope 2.6.1 beta 2

    Bugs Fixed

      - Collector #736: ZPublisher now allows marshalling tags to contain
        a '-'. This is the first step towards a fix for Collector #737

      - Collector #714: CopySupport's manage_clone now calls 
        manage_afterClone in the saem way that manage_pasteObjects does.

      - Collector #697: Multiple selection properties were incorrectly
        marshalled. note than any non-ascii multiple selection properties
        modified in versions without this fix will have been corrupted in
        the zodb.

      - Collector #256: Added a check in _doChangeUser to make sure 
        passwords isn't encrypted twice.


  Zope 2.6.1 beta 1

    Bugs Fixed

      - VirtualHostMonster handles empty Mapping paths properly.
    
      - Deadlock prevention code added.

        It was possible for earlier versions of ZODB to deadlock when
        using multiple storages.  If multiple transactions committed
        concurrently and both transactions involved two or more shared
        storages, deadlock was possible.  This problem has been fixed
        by introducing a sortKey() method to the transaction and
        storage APIs that is used to define an ordering on transaction
        participants.  This solution will prevent deadlocks provided