@@ -11,7 +11,7 @@
 #
 ##############################################################################
 
-__version__='$Revision: 1.86 $'[11:-2]
+__version__='$Revision: 1.87 $'[11:-2]
 
 import re, sys, os,  urllib, time, random, cgi, codecs
 from types import StringType, UnicodeType
@@ -223,6 +223,11 @@ class HTTPRequest(BaseRequest):
             del self.other[x]
         self._urls = ()
 
+    def getClientAddr(self):
+        """ The IP address of the client.
+        """
+        return self._client_addr
+
     def __init__(self, stdin, environ, response, clean=0):
         self._orig_env=environ
         # Avoid the overhead of scrubbing the environment in the
@@ -247,6 +252,16 @@ class HTTPRequest(BaseRequest):
         self.steps=[]
         self._steps=[]
         self._lazies={}
+
+
+        if environ.has_key('REMOTE_ADDR'):
+            self._client_addr = environ['REMOTE_ADDR']
+            if environ.has_key('HTTP_X_FORWARDED_FOR') and self._client_addr in trusted_proxies:
+                # REMOTE_ADDR is one of our trusted local proxies. Not really very remote at all.
+                # The proxy can tell us the IP of the real remote client in the forwarded-for header
+                self._client_addr = environ['HTTP_X_FORWARDED_FOR'].split(',')[-1].strip()
+        else:
+            self._client_addr = ''
 
         ################################################################
         # Get base info first. This isn't likely to cause
@@ -1489,3 +1504,20 @@ RECORDS=8
 REC=RECORD|RECORDS
 EMPTY=16
 CONVERTED=32
+
+
+# The ZOPE_TRUSTED_PROXIES environment variable contains a colon separated 
+# list of front-end proxies that are trusted to supply an accurate
+# X_FORWARDED_FOR header. If REMOTE_ADDR is one of the values in this list
+# and it has set an X_FORWARDED_FOR header, ZPublisher copies REMOTE_ADDR
+# into X_FORWARDED_BY, and the last element of the X_FORWARDED_FOR list
+# into REMOTE_ADDR. X_FORWARDED_FOR is left unchanged.
+# This function parses the environment variable into a module variable
+# 
+def trusted_proxies():
+    proxies = os.environ.get('ZOPE_TRUSTED_PROXIES','')
+    proxies = proxies.split(':')
+    proxies = [p.strip() for p in proxies]
+    return tuple(proxies)
+trusted_proxies = trusted_proxies()
+    
